将房间APi全部改成了rest,用户信息存在session中
